# energy-system-preprocessing

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
cli/: compare.py  detect.py  generate.py  main.py  presolve.py  solve.py  ui.py
energy_system_preprocessing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
experiments/: README.txt
experiments/annotation/: annotate_models.ipynb  benchmark_annotations.ipynb  compare_annotations.ipynb  compare_fixed_annotations.ipynb
experiments/examples/: README.txt
experiments/presolve/: papilo_presolve.ipynb  plot_presolves.ipynb  plot_static_presolve.ipynb  static_presolve.ipynb
experiments/scoring/: assign_scores.ipynb  plot_scores.ipynb
experiments/setup/: generate_models.ipynb
models/utils/: ModelConverter.py
resources/: install_pips.sh  install_pipstools.sh  install_utils.sh
results/: README.txt
solvers/scripts/: README.txt  Toolchain.cmake
src/: BlockStructure.py  config.py
src/core/: BlockStructure.py  Model.py  Presolving.py  Solving.py  __init__.py  block.py  matrix.py  model.py  mps_reader.py  presolving.py  simple_gdx.py
src/detection/: DetectionAlgorithm.py  DetectionHandler.py  PatternDetection.py  RCMDetection.py  SpectralDetection.py  __init__.py  algorithm.py  annotation.py  base.py  compare.py  pipstools_backend.py  reorder.py  utils.py  visualisation.py
src/detection_algorithms/: DetectionAlgorithm.py  (+2 more)
src/presolvers/papilo_handler/: CMakeLists.txt  __init__.py  papilo_handler.cpp
tests/: conftest.py
tools/: config.py  parse_papilo_log.py
(+116 files in other folders)
